Rules endpoints (#10)
* Remove auth middleware for the regular use case when creating a new establishment

* fix test

* changes in the user api to include rules endpoints
